[package]
name = "study"
version = "0.1.0"
authors = ["rongjie.duan@autocore.ai <rongjie.duan@autocore.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "=1.8.0", features = ["unstable"] }
tide = { git = "https://github.com/KodrAus/tide.git", branch = "patch-1"}
serde = { version = "1.0", features = ["derive"] }
zenoh = { version = "0.5.0-beta.5" }
async-h1 = { version = "2.3.0" }