[package]
name = "study"
version = "0.1.0"
authors = ["rongjie.duan@autocore.ai <rongjie.duan@autocore.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "=1.8.0", features = ["unstable", "attributes"] }
tide = { git = "https://github.com/KodrAus/tide.git", branch = "patch-1"}
serde = { version = "1.0", features = ["derive"] }
zenoh =  { git = "https://github.com/eclipse-zenoh/zenoh"}
clap = "2.33"
futures = "0.3.5"
env_logger = "0.8.1"
yaml-rust = "0.4"
linked-hash-map = "0.5.4"
tokio = { version = "1.*.*", features = ["full"] }
once_cell= "1.7.0"
lazy_static="1.4.0"